--- a/backend/report-service/src/main/resources/application.yml
+++ b/backend/report-service/src/main/resources/application.yml
@@ -33,7 +33,7 @@ services:
 
 kafka:
   topic:
-    daily-task-archived: daily-task-archived
+    daily-tasks: daily-tasks
 
 management:
   endpoints:
