--- a/backend/task-service/src/main/resources/application.yml
+++ b/backend/task-service/src/main/resources/application.yml
@@ -31,7 +31,7 @@ services:
 
 kafka:
   topic:
-    daily-task-archived: daily-task-archived
+    daily-tasks: daily-tasks
 
 management:
   endpoints:
