--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -57,6 +57,10 @@ dependencies {
 	// PDF Generation
 	implementation 'com.itextpdf:itext7-core:7.1.16'
 
+	// Prometheus Metrics
+	implementation 'io.micrometer:micrometer-registry-prometheus'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 }
 
 tasks.named('test') {
