--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,9 @@ frontend.url=http://localhost:4200
 application.security.jwt.secret-key=456126525254235874298574293579482375492835792347532
 application.security.jwt.expiration= 86400000
 application.security.jwt.refresh-token.expiration=604800000
+
+# Actuator & Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.server.port=8080
