--- a/backend/report-service/src/main/resources/application.yml
+++ b/backend/report-service/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
+        spring.json.default.type: com.grouptaskmanager.report.kafka.DailyTaskEvent
 
 services:
   auth-service:
@@ -39,5 +40,9 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
 
