--- a/backend/task-service/src/main/resources/application.yml
+++ b/backend/task-service/src/main/resources/application.yml
@@ -37,5 +37,9 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
 
