--- a/backend/api-gateway/build.gradle
+++ b/backend/api-gateway/build.gradle
@@ -24,6 +24,7 @@ ext {
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
     
     // JWT validation
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
