--- a/backend/task-service/Dockerfile
+++ b/backend/task-service/Dockerfile
@@ -5,6 +5,10 @@ COPY gradle gradle
 COPY build.gradle .
 COPY settings.gradle .
 COPY src src
+
+# windows fix
+RUN sed -i 's/\r$//' gradlew
+
 RUN chmod +x ./gradlew
 RUN ./gradlew bootJar --no-daemon
 
