--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -9,6 +9,12 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['node-exporter:9100']
+        labels:
+          instance: 'host'
+
   - job_name: 'spring-boot-app'
     metrics_path: '/actuator/prometheus'
     static_configs:
